k8s/init-download.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-download-demo
  namespace: lab16
  labels:
    app: init-download-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: init-download-demo
  template:
    metadata:
      labels:
        app: init-download-demo
    spec:
      volumes:
        - name: workdir
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: workdir
              mountPath: /usr/share/nginx/html
