k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
  namespace: devops-lab9
  labels:
    app: devops-app
spec:
  type: NodePort
  selector:
    app: devops-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
      nodePort: 30080
